src/objects/Invoice_Item__c.object
<CustomObject>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>Attendee__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commissionable_Revenue__c</fullName>
        <label>Commissionable Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conga_Invoice_Table_generator__c</fullName>
        <formula>IF(AND( Invoice__r.Show_Quantity_Column__c, NOT(Invoice__r.Show_Rate_Column__c) ), 
    &quot;All&quot;, 
     &quot;&quot;
    )</formula>
        <label>Conga Invoice Table generator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Text__c</fullName>
        <label>Invoice Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Invoice_Paid__c</fullName>
        <description>Has this invoice been paid?</description>
        <formula>Invoice__r.Payment_Status__c = &quot;Paid&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Invoice Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Formula__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Item__c , Item__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <formula>Text(Item__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modification__c</fullName>
        <label>Modification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order No</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Sheet_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Sheet Item</label>
        <referenceTo>Rate_Sheet_Item__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Round((Price__c *(1+ Modification__c )),2) * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_of_Measure__c</fullName>
        <label>Units of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Page</fullName>
                </value>
                <value>
                    <fullName>Per Transcript</fullName>
                </value>
                <value>
                    <fullName>Per Hour</fullName>
                </value>
                <value>
                    <fullName>Per Person</fullName>
                </value>
                <value>
                    <fullName>Per Day</fullName>
                </value>
                <value>
                    <fullName>Per Kit</fullName>
                </value>
                <value>
                    <fullName>Per Half Day</fullName>
                </value>
                <value>
                    <fullName>Per Job</fullName>
                </value>
                <value>
                    <fullName>Per Disk</fullName>
                </value>
                <value>
                    <fullName>Per Mile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>II-{0000}</displayFormat>
        <label>Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_Invoice_Item</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW()==false &amp;&amp; (
ISCHANGED(Commissionable_Revenue__c) ||
ISCHANGED(Item_Type__c) ||
ISCHANGED(Modification__c) ||
ISCHANGED(Price__c) ||
ISCHANGED(Quantity__c) ||
ISCHANGED(Total_Price__c)
 
) || ISNEW()) &amp;&amp; (MONTH(Invoice__r.Invoice_Date__c  ) &lt; MONTH(TODAY())
||
YEAR(Invoice__r.Invoice_Date__c) &lt; YEAR(TODAY()) || TEXT(Invoice__r.Status__c) ==&apos;Void&apos;)</errorConditionFormula>
        <errorMessage>Invoice items cannot be changed in prior months. Use credits instead.</errorMessage>
    </validationRules>
</CustomObject>